Update subtitle to reflect focus on Front End Development

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <img src="stevan.JPG" alt="Stevan Zaky" class="profile-img">
             <div class="header-content">
                 <h1>Stevan Zaky</h1>
-                <p class="subtitle">Full Stack Developer | Software Engineer</p>
+                <p class="subtitle">Front End Developer | Software Engineer</p>
                 <p>Passionate about creating innovative web solutions and building efficient systems. Experienced in
                     full-stack development with a focus on modern web technologies.</p>
                 <div class="social-links">
