Update subtitle to emphasize front-end development focus

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <h1>Stevan Zaky</h1>
                 <p class="subtitle">Front End Developer | Software Engineer</p>
                 <p>Passionate about creating innovative web solutions and building efficient systems. Experienced in
-                    full-stack development with a focus on modern web technologies.</p>
+                    front-end development and full-stack development with a focus on modern web technologies.</p>
                 <div class="social-links">
                     <a href="https://github.com/vanstevanzaky" target="_blank">
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
