Add certificate project card to portfolio showcasing Junior Web Developer certification

--- a/index.html
+++ b/index.html
@@ -258,6 +258,19 @@
             <h2>Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
+                    <h3>Sertifikat Junior Web Developer</h3>
+                    <p>Sertifikat resmi Junior Web Developer dari Digital Talent Scholarship, membuktikan kompetensi
+                        dalam pengembangan web modern dan praktik terbaik industri.</p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Certification</span>
+                        <span class="tech-tag">Web Development</span>
+                        <span class="tech-tag">Digital Talent</span>
+                    </div>
+                    <br>
+                    <a href="Sertifikat_STEVAN ZAKY SETYANTO_Junior Web Developer.pdf" class="project-link"
+                        target="_blank">Lihat Sertifikat</a>
+                </div>
+                <div class="project-card">
                     <h3>FINALIS JTI WEB</h3>
                     <p>Public-facing website for FINALIS JTI system. Provides information about finalists, achievements,
                         and program details with responsive design.</p>
