Update project section titles and descriptions for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
         </header>
 
         <section class="section">
-            <h2>Featured Projects</h2>
+            <h2>Portfolio Highlights</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Sertifikat Junior Web Developer</h3>
-                    <p>Sertifikat resmi Junior Web Developer dari Digital Talent Scholarship, membuktikan kompetensi
-                        dalam pengembangan web modern dan praktik terbaik industri.</p>
+                    <h3>Junior Web Developer Certificate</h3>
+                    <p>Official Junior Web Developer certificate from Digital Talent Scholarship, demonstrating
+                        competency in modern web development and industry best practices.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">Certification</span>
                         <span class="tech-tag">Web Development</span>
@@ -268,7 +268,7 @@
                     </div>
                     <br>
                     <a href="Sertifikat_STEVAN ZAKY SETYANTO_Junior Web Developer.pdf" class="project-link"
-                        target="_blank">Lihat Sertifikat</a>
+                        target="_blank">View Certificate</a>
                 </div>
                 <div class="project-card">
                     <h3>FINALIS JTI WEB</h3>
