--- a/index.html
+++ b/index.html
@@ -257,19 +257,7 @@
         <section class="section">
             <h2>Portfolio Highlights</h2>
             <div class="projects-grid">
-                <div class="project-card">
-                    <h3>Junior Web Developer Certificate</h3>
-                    <p>Official Junior Web Developer certificate from Digital Talent Scholarship, demonstrating
-                        competency in modern web development and industry best practices.</p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">Certification</span>
-                        <span class="tech-tag">Web Development</span>
-                        <span class="tech-tag">Digital Talent</span>
-                    </div>
-                    <br>
-                    <a href="Sertifikat_STEVAN ZAKY SETYANTO_Junior Web Developer.pdf" class="project-link"
-                        target="_blank">View Certificate</a>
-                </div>
+             
                 <div class="project-card">
                     <h3>FINALIS JTI WEB</h3>
                     <p>Public-facing website for FINALIS JTI system. Provides information about finalists, achievements,
@@ -355,6 +343,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- Full-width Certificate Card at the bottom -->
+        <div class="certificate-fullwidth-card"
+            style="background: white; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); margin: 40px 0 0 0; padding: 40px 30px; display: flex; flex-wrap: wrap; align-items: center; gap: 40px;">
+            <img src="sertif.jpg" alt="Junior Web Developer Certificate"
+                style="max-width: 400px; width: 100%; border-radius: 10px; box-shadow: 0 2px 8px rgba(102,126,234,0.1); flex: 1 1 300px;">
+            <div style="flex: 2 1 400px;">
+                <h3 style="color: #667eea; font-size: 2em; margin-bottom: 15px;">Junior Web Developer Certificate
+                </h3>
+                <p style="color: #666; margin-bottom: 20px;">Official certificate from Digital Talent Scholarship,
+                    proving skills in modern web development and industry best practices.</p>
+                <div style="margin-bottom: 20px;">
+                    <span class="tech-tag">Certification</span>
+                    <span class="tech-tag">Web Development</span>
+                </div>
+                <a href="Sertifikat_STEVAN ZAKY SETYANTO_Junior Web Developer.pdf" class="project-link" target="_blank"
+                    style="padding: 12px 28px;">View Details</a>
+            </div>
+        </div>
 
         <footer>
             <p>&copy; 2024 Stevan Zaky. All rights reserved.</p>
