Update tech stack tags in project description to reflect Bootstrap usage

--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@
                     <p>E-commerce platform for embroidery business. Includes product catalog, order management, and
                         customer relationship management features.</p>
                     <div class="tech-stack">
-                        <span class="tech-tag">E-commerce</span>
-                        <span class="tech-tag">Payment Integration</span>
+                        <span class="tech-tag">Bootstrap</span>
                         <span class="tech-tag">PHP</span>
                     </div>
                     <br>
